# aos2024

./: spin.toml
.neutrino/: config.toml
.wit/components/challenge1/: deps.wit
challenge1/: Cargo.toml  test.hurl
challenge1/src/: lib.rs
challenge1/src/bindings/: deps.rs
challenge2/: non.js
challenge2/wit/: non.wit
challenge3/: app.py  test.hurl
static/: gift-suggestions.html  index.html
