[package]
name = "challenge1"
authors = ["Mikkel Mørk Hegnhøj <mikkel@fermyon.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
spin-sdk = "3.1.0"
urlencoding = "2.1.3"
wit-bindgen = "0.36.0"

[workspace]
